Fix the anno-tag overflow problem , Add tinymce language

--- a/resources/assets/sass/annotation.scss
+++ b/resources/assets/sass/annotation.scss
@@ -74,13 +74,14 @@
   right: 0px;
   top: 50px;
   max-width: 260px;
-  width: 235px;
+  width: 235px ;
+  max-height: 400px;
   min-height: 100px;
   z-index: 50;
   margin-right: 0px;
   padding-left: 45px;
   padding-bottom: 0px;
-  padding-top:  20px; 
+  padding-top:  15px; 
   background-color: #FFFFFF;
   background:url(../image/sider/sider_bg.png) no-repeat top left; width:342px; height:400px;
   border-top-left-radius: 5px;
@@ -177,7 +178,7 @@
   .anno-users {
     color: #545454;
     ul {
-      max-height: 245px;
+      max-height: 80px;
       overflow-y: scroll;
     }
   }
@@ -185,7 +186,7 @@
   .anno-tags {
     margin-top: 10px;
     ul {
-      max-height: 250px;
+      max-height: 28px;
       overflow-y: scroll;
     }
   }
